
History of Regshot

Download latest version at:
http://sourceforge.net/projects/regshot/

-------------------------------------------------
*: Note you may interest
!: Changes made
+: Function added
-: Function deleted
-------------------------------------------------

V1.9.1 development snapshot
+ Support for QWORDs
+ Support for DWORDs and QWORDs with different endiannes than CPU

V1.9.0 2013-02-02
+ Add 64-Bit builds
+ Add Unicode builds with .hivu files (not compatible with ANSI .hiv files)
+ Structure of hive files enhanced, while keeping backwards compatibility for ANSI builds
+ Skip list checks now also against the single key/value/file name additionally to checking the complete path
+ Add a proper manifest file to enable UAC elevation
+ Symbol files released for all builds
! Add support for various compilers
! Various code cleanups
* New program icon (thanks to the PortableApps guys)
* All Regshot versions can be build via WDK

V1.8.2 2007-11-03
! Change some calls to ANSI version (lstrcmp->strcmp...)
! Use risk . and .. compare
! Use HeapAlloc instead of GlobalAlloc, danger but slightly faster, see source code
! Html differ color from e0e0e0 to e0f0e0 [Thanks Charles!]
+ Add French language fixed, Kazakh language.
+ Add new style browse for folder by Belogorokhov Youri! (NT+)
+ Do not save setting to regshot.ini when there is no such ini file
 (idea from "alan borer" in my msg board)
+ Fix crash bug in former version if start from cmd window
! Minor changes and minor bug fixed

V1.8.1 2007-06-20
! Fix a Crash bug in 1.8.0! (LoadHive()->ReadFile())
+ Dir chains comparison is more human.
+ "UseLongRegHead" option added in regshot.ini to compatible with undoReg (1.46)
* "UseLongRegHead=1" means using "HKEY_LOCAL_MACHINE" instead of "HKLM", default 0
* Do not compare shots saved with different "UseLongRegHead" option!

V1.8.0 2007-06-15 (Its TiANWEi reloaded)
! Fix file chain break bug in 1.7
! Fix several pointer mis-point (lpComputer, etc)